# sisyphus.h

./: CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  bench_barycentric.c  bench_cpp_wrapper.cpp  bench_dct.c  bench_fractional.c  bench_nufct.c  bench_pepin.c  bench_pepin_convergence.c  bench_tensor.c  bench_tps.c
examples/: CMakeLists.txt
examples/c/: example_barycentric.c  example_denoise_1d.c  example_denoise_2d.c  example_fractional.c  example_nufct.c  example_scattered.c  example_spline_fit.c
examples/cpp/: example_cpp_spline_fit.cpp
include/: sisyphus.h  sisyphus.hpp
tests/: CMakeLists.txt  test_barycentric.c  test_cpp_wrapper.cpp  test_dct.c  test_denoise.c  test_derivative.c  test_fractional.c  test_harness.h  test_jacobian.c  test_nufct.c  test_pepin.c  test_smoothing.c  test_tensor.c  test_tps.c
